[package]
name = "datapack_creato_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_node_graph = "0.4.0"
enum-ordinalize = "3.1.12"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
