[package]
name = "datapack_creato_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_node_graph = "0.4.0"
enum-ordinalize = "3.1.12"
json = "0.12.4"
log = "0.4.17"
simple_logger = "4.1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
walkdir = "2.3.3"
